--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
 </head><nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">
+          <img src="img/logo.png" alt="">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -80,11 +82,11 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-</div><section class="section__content section--highlight">
+</div><section class="section__content section--blue">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<h3 class="text-center">
+				<h3 class="text-center section-title">
 					Keunggulan Baruna
 				</h3>
 			</div>
@@ -103,7 +105,18 @@
 				<div class="advantage__item">
 					<img src="img/kelebihan.jpg" alt="">
 					<div class="advantage__title">
-						Free Survey
+						Free Design
+					</div>
+					<div class="advantage__text">
+						Nikmati layanan Free Survey & konsultasi bangun atau renovasi rumah Mitrarenov untuk wilayah Jabodetabek
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="advantage__item">
+					<img src="img/kelebihan.jpg" alt="">
+					<div class="advantage__title">
+						Kemudahan Pantau Progress
 					</div>
 					<div class="advantage__text">
 						Nikmati layanan Free Survey & konsultasi bangun atau renovasi rumah Mitrarenov untuk wilayah Jabodetabek
@@ -121,11 +134,158 @@
 					</div>
 				</div>
 			</div>
+			<div class="col-md-4">
+				<div class="advantage__item">
+					<img src="img/kelebihan.jpg" alt="">
+					<div class="advantage__title">
+						Free Design
+					</div>
+					<div class="advantage__text">
+						Nikmati layanan Free Survey & konsultasi bangun atau renovasi rumah Mitrarenov untuk wilayah Jabodetabek
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="advantage__item">
+					<img src="img/kelebihan.jpg" alt="">
+					<div class="advantage__title">
+						Kemudahan Pantau Progress
+					</div>
+					<div class="advantage__text">
+						Nikmati layanan Free Survey & konsultasi bangun atau renovasi rumah Mitrarenov untuk wilayah Jabodetabek
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
-</section>
+</section><section class="section__content">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<h3 class="text-center section-title">
+					Pilih Jasa Yang Anda Butuhkan
+				</h3>
+			</div>
+			<div class="col-md-4">
+				<div class="advantage__item">
+					<img src="img/kelebihan.jpg" alt="">
+					<div class="advantage__title">
+						Jasa Bangun Rumah
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="advantage__item">
+					<img src="img/kelebihan.jpg" alt="">
+					<div class="advantage__title">
+						Jasa Renovasi Rumah
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="advantage__item">
+					<img src="img/kelebihan.jpg" alt="">
+					<div class="advantage__title">
+						Pengajuan Kredit Bangun & Renovasi RUmah
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section><section class="section__content section--grey">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<h3 class="text-center section-title">
+					3 Langkah Mudah Mitrarenov
+				</h3>
+			</div>
+			<div class="col-md-4">
+				<div class="row">
+					<div class="col-md-4">
+						<img src="img/order-online.png" alt="">	
+					</div>
+					<div class="col-md-8">
+						<h4>Order online</h4>
+						<p>melalui gadget</p>
+					</div>
+				</div>				
+			</div>
+			<div class="col-md-4">
+				<div class="row">
+					<div class="col-md-4">
+						<img src="img/survey.png" alt="">	
+					</div>
+					<div class="col-md-8">
+						<h4>Survey Lokasi</h4>
+						<p>yang akan dibangun</p>
+					</div>
+				</div>				
+			</div>
+			<div class="col-md-4">
+				<div class="row">
+					<div class="col-md-4">
+						<img src="img/monitoring-progres-online.png" alt="">	
+					</div>
+					<div class="col-md-8">
+						<h4>Pantau Progress</h4>
+						<p>online</p>
+					</div>
+				</div>	
+			</div>
+		</div>
+	</div>
+</section><footer>
+  <div class="container footer__top section__content">
+    <div class="row">
 
-	<!-- External JS -->
+      <div class="col-md-3">
+        <div class="navbar-brand">
+          <img src="img/logo-white.png" alt="">
+        </div>
+      </div>
+      
+      <div class="col-md-3 list-menu-footer">
+         <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Tentang Kami</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Cara Kerja</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="col-md-3 list-menu-footer">
+         <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Jasa Kami</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Hubungi Kami</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="col-md-3">
+        <h5>Head Office </h5>
+        <p>
+          Rukan Taman Pondok Kelapa <br>
+          Blok F No.1 Pondok Kelapa <br>
+          Duren Sawit – Jakarta Timur 13450
+        </p>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="footer__bottom text-center">
+    <a href="#">Copyright © 2015 - Mitrarenov.com</a>
+  </div>
+</footer>	<!-- External JS -->
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
