--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+
+    <link rel="stylesheet" type="text/css" href="fonts/brandon-grotesque.css">
     <!-- Modernizr JS for IE8 support of HTML5 elements and media queries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
 
-</head><nav class="navbar navbar-expand-lg navbar-light bg-light">
+</head><nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
         <a class="navbar-brand" href="#">
           <img src="img/logo.png" alt="">
@@ -53,24 +58,24 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="img/deer.jpg" alt="First slide">
+      <img class="d-block w-100" src="img/slide-1.jpg" alt="First slide">
        <div class="carousel-caption d-none d-md-block">
-        <h3>This is title</h3>
-        <p>This is caption</p>
+        <h3>Jasa Bangun dan Renovasi</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe est placeat modi harum laudantium eveniet alias cumque amet aut vel.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="img/deer.jpg" alt="Second slide">
+      <img class="d-block w-100" src="img/slide-2.jpg" alt="Second slide">
         <div class="carousel-caption d-none d-md-block">
-          <h3>This is title</h3>
-          <p>This is caption</p>
+          <h3>Dapatkan DISKON menarik</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum corporis natus ipsum recusandae tempora earum, quam eaque ea ducimus, neque, commodi consequuntur deleniti sunt enim architecto. Soluta numquam tempora nemo.</p>
         </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="img/deer.jpg" alt="Third slide">
+      <img class="d-block w-100" src="img/slide-3.jpg" alt="Third slide">
         <div class="carousel-caption d-none d-md-block">
-          <h3>This is title</h3>
-          <p>This is caption</p>
+          <h3>Tunggu Apa Lagi!</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti rem laborum ex, inventore natus cupiditate praesentium est nam beatae consequuntur, ipsam amet repellendus minima illum molestiae molestias, vitae unde aspernatur.</p>
         </div>
     </div>
   </div>
@@ -167,27 +172,30 @@
 				</h3>
 			</div>
 			<div class="col-md-4">
-				<div class="advantage__item">
-					<img src="img/kelebihan.jpg" alt="">
-					<div class="advantage__title">
+				<div class="service__item">
+					<img src="img/icons/add-house.svg" alt="">
+					<div class="service__title">
 						Jasa Bangun Rumah
 					</div>
+					<a href="#"></a>
 				</div>
 			</div>
 			<div class="col-md-4">
-				<div class="advantage__item">
-					<img src="img/kelebihan.jpg" alt="">
-					<div class="advantage__title">
+				<div class="service__item">
+					<img src="img/icons/reforms-house.svg" alt="">
+					<div class="service__title">
 						Jasa Renovasi Rumah
 					</div>
+					<a href="#"></a>
 				</div>
 			</div>
 			<div class="col-md-4">
-				<div class="advantage__item">
-					<img src="img/kelebihan.jpg" alt="">
-					<div class="advantage__title">
+				<div class="service__item">
+					<img src="img/icons/buy-house.svg" alt="">
+					<div class="service__title">
 						Pengajuan Kredit Bangun & Renovasi RUmah
 					</div>
+					<a href="#"></a>
 				</div>
 			</div>
 		</div>
@@ -201,37 +209,86 @@
 				</h3>
 			</div>
 			<div class="col-md-4">
-				<div class="row">
+				<div class="row align-items-center">
 					<div class="col-md-4">
 						<img src="img/order-online.png" alt="">	
 					</div>
-					<div class="col-md-8">
+					<div class="col-md-8 d-flex flex-column">
 						<h4>Order online</h4>
 						<p>melalui gadget</p>
 					</div>
 				</div>				
 			</div>
 			<div class="col-md-4">
-				<div class="row">
+				<div class="row align-items-center ">
 					<div class="col-md-4">
 						<img src="img/survey.png" alt="">	
 					</div>
-					<div class="col-md-8">
+					<div class="col-md-8 d-flex flex-column">
 						<h4>Survey Lokasi</h4>
 						<p>yang akan dibangun</p>
 					</div>
 				</div>				
 			</div>
 			<div class="col-md-4">
-				<div class="row">
+				<div class="row align-items-center">
 					<div class="col-md-4">
 						<img src="img/monitoring-progres-online.png" alt="">	
 					</div>
-					<div class="col-md-8">
+					<div class="col-md-8 d-flex flex-column">
 						<h4>Pantau Progress</h4>
 						<p>online</p>
 					</div>
 				</div>	
+			</div>
+		</div>
+	</div>
+</section><section class="section__content">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<h3 class="text-center section-title">
+					Testimonial
+				</h3>
+			</div>
+			<div class="col-md-12">
+				<div class="owl-carousel owl-theme testi__slider">
+					
+				    <div class="testi__item">
+				    	<div class="row">
+				    		<div class="col-md-4">
+				    			<img class="testi__img" src="img/testi.jpg" alt="">
+				    		</div>
+				    		<div class="col-md-8 d-flex align-items-center">
+				    			<div class="testi__text">
+				    				<p class="testi__info">
+				    					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint hic deleniti dolorem deserunt asperiores beatae animi labore sapiente, et officia?
+				    				</p>
+				    				<h5 class="testi__name">Jon Snow</h5>
+				    				<h5 class="testi__job">Pengusaha</h5>
+				    			</div>
+				    		</div>
+				    	</div>
+				    </div>
+
+				     <div class="testi__item">
+				    	<div class="row">
+				    		<div class="col-md-4">
+				    			<img class="testi__img" src="img/testi.jpg" alt="">
+				    		</div>
+				    		<div class="col-md-8 d-flex align-items-center">
+				    			<div class="testi__text">
+				    				<p class="testi__info">
+				    					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint hic deleniti dolorem deserunt asperiores beatae animi labore sapiente, et officia?
+				    				</p>
+				    				<h5 class="testi__name">Jon Snow</h5>
+				    				<h5 class="testi__job">Pengusaha</h5>
+				    			</div>
+				    		</div>
+				    	</div>
+				    </div>
+				   
+				</div>
 			</div>
 		</div>
 	</div>
@@ -289,6 +346,7 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
 	<!-- Main JS -->
 	<script src="js/app.js "></script>
 
