--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 
       <div class="col-md-3">
         <div class="navbar-brand">
-          <img src="img/logo-white.png" alt="">
+          <img src="img/logo.png" alt="">
         </div>
       </div>
       
