--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Hubungi Kami</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="tel://0274123456">(0274) 123456</a>
+            </li>
           </ul>
         </div>
     </div>
@@ -87,77 +90,81 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-</div><section class="section__content section--blue">
-	<div class="container">
+</div><section class="section__content--full">
+	<div class="container-fluid">
 		<div class="row">
-			<div class="col-md-12">
+			<div class="col-md-4 section--blue align-items-center">
 				<h3 class="text-center section-title">
 					Keunggulan Baruna
 				</h3>
 			</div>
-			<div class="col-md-4">
-				<div class="advantage__item">
-					<img src="img/kelebihan.jpg" alt="">
-					<div class="advantage__title">
-						Free Survey
+			<div class="col-md-8 section--grey advantage__section">
+				<div class="row">
+					<div class="col-md-6">
+						<div class="advantage__item">
+							<img src="img/kelebihan.jpg" alt="">
+							<div class="advantage__title">
+								Free Survey
+							</div>
+							<div class="advantage__text">
+								Nikmati layanan Free Survey & konsultasi bangun atau renovasi rumah Mitrarenov untuk wilayah Jabodetabek
+							</div>
+						</div>
 					</div>
-					<div class="advantage__text">
-						Nikmati layanan Free Survey & konsultasi bangun atau renovasi rumah Mitrarenov untuk wilayah Jabodetabek
+					<div class="col-md-6">
+						<div class="advantage__item">
+							<img src="img/kelebihan.jpg" alt="">
+							<div class="advantage__title">
+								Free Design
+							</div>
+							<div class="advantage__text">
+								Nikmati layanan Free Survey & konsultasi bangun atau renovasi rumah Mitrarenov untuk wilayah Jabodetabek
+							</div>
+						</div>
 					</div>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="advantage__item">
-					<img src="img/kelebihan.jpg" alt="">
-					<div class="advantage__title">
-						Free Design
+					<div class="col-md-6">
+						<div class="advantage__item">
+							<img src="img/kelebihan.jpg" alt="">
+							<div class="advantage__title">
+								Kemudahan Pantau Progress
+							</div>
+							<div class="advantage__text">
+								Nikmati layanan Free Survey & konsultasi bangun atau renovasi rumah Mitrarenov untuk wilayah Jabodetabek
+							</div>
+						</div>
 					</div>
-					<div class="advantage__text">
-						Nikmati layanan Free Survey & konsultasi bangun atau renovasi rumah Mitrarenov untuk wilayah Jabodetabek
+					<div class="col-md-6">
+						<div class="advantage__item">
+							<img src="img/kelebihan.jpg" alt="">
+							<div class="advantage__title">
+								Free Survey
+							</div>
+							<div class="advantage__text">
+								Nikmati layanan Free Survey & konsultasi bangun atau renovasi rumah Mitrarenov untuk wilayah Jabodetabek
+							</div>
+						</div>
 					</div>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="advantage__item">
-					<img src="img/kelebihan.jpg" alt="">
-					<div class="advantage__title">
-						Kemudahan Pantau Progress
+					<div class="col-md-6">
+						<div class="advantage__item">
+							<img src="img/kelebihan.jpg" alt="">
+							<div class="advantage__title">
+								Free Design
+							</div>
+							<div class="advantage__text">
+								Nikmati layanan Free Survey & konsultasi bangun atau renovasi rumah Mitrarenov untuk wilayah Jabodetabek
+							</div>
+						</div>
 					</div>
-					<div class="advantage__text">
-						Nikmati layanan Free Survey & konsultasi bangun atau renovasi rumah Mitrarenov untuk wilayah Jabodetabek
-					</div>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="advantage__item">
-					<img src="img/kelebihan.jpg" alt="">
-					<div class="advantage__title">
-						Free Survey
-					</div>
-					<div class="advantage__text">
-						Nikmati layanan Free Survey & konsultasi bangun atau renovasi rumah Mitrarenov untuk wilayah Jabodetabek
-					</div>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="advantage__item">
-					<img src="img/kelebihan.jpg" alt="">
-					<div class="advantage__title">
-						Free Design
-					</div>
-					<div class="advantage__text">
-						Nikmati layanan Free Survey & konsultasi bangun atau renovasi rumah Mitrarenov untuk wilayah Jabodetabek
-					</div>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="advantage__item">
-					<img src="img/kelebihan.jpg" alt="">
-					<div class="advantage__title">
-						Kemudahan Pantau Progress
-					</div>
-					<div class="advantage__text">
-						Nikmati layanan Free Survey & konsultasi bangun atau renovasi rumah Mitrarenov untuk wilayah Jabodetabek
+					<div class="col-md-6">
+						<div class="advantage__item">
+							<img src="img/kelebihan.jpg" alt="">
+							<div class="advantage__title">
+								Kemudahan Pantau Progress
+							</div>
+							<div class="advantage__text">
+								Nikmati layanan Free Survey & konsultasi bangun atau renovasi rumah Mitrarenov untuk wilayah Jabodetabek
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -244,6 +251,35 @@
 		</div>
 	</div>
 </section><section class="section__content">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<h3 class="text-center section-title">
+					Projek Yang Sudah Kami Kerjakan
+				</h3>
+			</div>
+			<div class="col-md-12">
+				<div class="owl-carousel owl-theme portfolio__slider">
+					
+				    <div class="portfolio__item">
+				    	<img src="img/slide-3.jpg" alt="">
+				    	<div class="portfolio__caption">
+				    		Rumah di Jakarta Barat
+				    	</div>
+				    </div>
+
+				    <div class="portfolio__item">
+				    	<img src="img/slide-3.jpg" alt="">
+				    	<div class="portfolio__caption">
+				    		Rumah di Jakarta Barat
+				    	</div>
+				    </div>
+				   
+				</div>
+			</div>
+		</div>
+	</div>
+</section><section class="section__content section--grey">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
