--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 			</div>
 		</div>
 	</div>
-</section><section class="section__content section--grey">
+</section><section class="section__content section--blue">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
@@ -329,16 +329,24 @@
 		</div>
 	</div>
 </section><footer>
-  <div class="container footer__top section__content">
+  <div class="container footer__top">
     <div class="row">
 
-      <div class="col-md-3">
+      <div class="col-md-12">
         <div class="navbar-brand">
           <img src="img/logo.png" alt="">
         </div>
       </div>
+      <div class="col-md-12 text-center">
+<!--         <h5>Head Office </h5> -->
+        <p>
+          Rukan Taman Pondok Kelapa <br>
+          Blok F No.1 Pondok Kelapa <br>
+          Duren Sawit – Jakarta Timur 13450
+        </p>
+      </div>
       
-      <div class="col-md-3 list-menu-footer">
+      <div class="col-md-12 list-menu-footer">
          <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
@@ -349,12 +357,7 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Cara Kerja</a>
           </li>
-        </ul>
-      </div>
-
-      <div class="col-md-3 list-menu-footer">
-         <ul class="navbar-nav">
-          <li class="nav-item">
+           <li class="nav-item">
             <a class="nav-link" href="#">Jasa Kami</a>
           </li>
           <li class="nav-item">
@@ -363,20 +366,11 @@
         </ul>
       </div>
 
-      <div class="col-md-3">
-        <h5>Head Office </h5>
-        <p>
-          Rukan Taman Pondok Kelapa <br>
-          Blok F No.1 Pondok Kelapa <br>
-          Duren Sawit – Jakarta Timur 13450
-        </p>
-      </div>
-
     </div>
   </div>
 
   <div class="footer__bottom text-center">
-    <a href="#">Copyright © 2015 - Mitrarenov.com</a>
+    <a href="#">Copyright © 2017 - Mitrarenov.com</a>
   </div>
 </footer>	<!-- External JS -->
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
