--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
 
-    <link rel="stylesheet" type="text/css" href="fonts/brandon-grotesque.css">
+    <link rel="stylesheet" type="text/css" href="fonts/avenir.css">
     <!-- Modernizr JS for IE8 support of HTML5 elements and media queries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
 
@@ -47,8 +47,8 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Hubungi Kami</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="tel://0274123456">(0274) 123456</a>
+            <li class="nav-item nav__phone">
+              <a class="nav-link" href="#">08121383730 &nbsp; | &nbsp; (021) 29060114</a>
             </li>
           </ul>
         </div>
@@ -144,28 +144,6 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-6">
-						<div class="advantage__item">
-							<img src="img/kelebihan.jpg" alt="">
-							<div class="advantage__title">
-								Free Design
-							</div>
-							<div class="advantage__text">
-								Nikmati layanan Free Survey & konsultasi bangun atau renovasi rumah Mitrarenov untuk wilayah Jabodetabek
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6">
-						<div class="advantage__item">
-							<img src="img/kelebihan.jpg" alt="">
-							<div class="advantage__title">
-								Kemudahan Pantau Progress
-							</div>
-							<div class="advantage__text">
-								Nikmati layanan Free Survey & konsultasi bangun atau renovasi rumah Mitrarenov untuk wilayah Jabodetabek
-							</div>
-						</div>
-					</div>
 				</div>
 			</div>
 		</div>
@@ -200,14 +178,14 @@
 				<div class="service__item">
 					<img src="img/icons/buy-house.svg" alt="">
 					<div class="service__title">
-						Pengajuan Kredit Bangun & Renovasi RUmah
+						Jasa Desain Rumah
 					</div>
 					<a href="#"></a>
 				</div>
 			</div>
 		</div>
 	</div>
-</section><section class="section__content section--blue">
+</section><section class="section__content section--blue section--transparent" style="background-image: url('img/slide-2.jpg')">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
@@ -292,10 +270,10 @@
 					
 				    <div class="testi__item">
 				    	<div class="row">
-				    		<div class="col-md-4">
+				    		<div class="col-md-12">
 				    			<img class="testi__img" src="img/testi.jpg" alt="">
 				    		</div>
-				    		<div class="col-md-8 d-flex align-items-center">
+				    		<div class="col-md-12 d-flex align-items-center">
 				    			<div class="testi__text">
 				    				<p class="testi__info">
 				    					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint hic deleniti dolorem deserunt asperiores beatae animi labore sapiente, et officia?
@@ -309,10 +287,10 @@
 
 				     <div class="testi__item">
 				    	<div class="row">
-				    		<div class="col-md-4">
+				    		<div class="col-md-12">
 				    			<img class="testi__img" src="img/testi.jpg" alt="">
 				    		</div>
-				    		<div class="col-md-8 d-flex align-items-center">
+				    		<div class="col-md-12 d-flex align-items-center">
 				    			<div class="testi__text">
 				    				<p class="testi__info">
 				    					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint hic deleniti dolorem deserunt asperiores beatae animi labore sapiente, et officia?
@@ -328,6 +306,73 @@
 			</div>
 		</div>
 	</div>
+</section><section class="section__content working__area">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4 align-items-center section--blue">
+				<h3 class="text-center section-title">
+					Area Kerja Kami
+				</h3>
+			</div>
+			<div class="col-md-8 align-items-center justify-content-center section--grey">
+				<ul class="list-unstyled text-center">
+					<li class="working__area-item">
+						<span>
+							<img src="img/icons/check.svg" alt="">
+						</span>
+						Jakarta
+					</li>
+					<li class="working__area-item">
+						<span>
+							<img src="img/icons/check.svg" alt="">
+						</span>
+						Bogor
+					</li>
+					<li class="working__area-item">
+						<span>
+							<img src="img/icons/check.svg" alt="">
+						</span>
+						Bekasi
+					</li>
+					<li class="working__area-item">
+						<span>
+							<img src="img/icons/check.svg" alt="">
+						</span>
+						Depok
+					</li>
+					<li class="working__area-item">
+						<span>
+							<img src="img/icons/check.svg" alt="">
+						</span>
+						Banten
+					</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</section><section class="section__content section__content--small">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-2 client__item">
+				<img src="img/client-1.png" alt="">
+			</div>
+			<div class="col-md-2 client__item">
+				<img src="img/client-2.png" alt="">
+			</div>
+			<div class="col-md-2 client__item">
+				<img src="img/client-3.png" alt="">
+			</div>
+			<div class="col-md-2 client__item">
+				<img src="img/client-4.png" alt="">
+			</div>
+			<div class="col-md-2 client__item">
+				<img src="img/client-5.png" alt="">
+			</div>
+			<div class="col-md-2 client__item">
+				<img src="img/client-6.png" alt="">
+			</div>
+		</div>
+	</div>
 </section><footer>
   <div class="container footer__top">
     <div class="row">
@@ -340,9 +385,8 @@
       <div class="col-md-12 text-center">
 <!--         <h5>Head Office </h5> -->
         <p>
-          Rukan Taman Pondok Kelapa <br>
-          Blok F No.1 Pondok Kelapa <br>
-          Duren Sawit – Jakarta Timur 13450
+          Jalan Kampung Keramat, Setu <br>
+          Cipayung, Jakarta, Indonesia 13880
         </p>
       </div>
       
@@ -370,7 +414,7 @@
   </div>
 
   <div class="footer__bottom text-center">
-    <a href="#">Copyright © 2017 - Mitrarenov.com</a>
+    <a href="#">Copyright © 2017 - barunakontraktor.com</a>
   </div>
 </footer>	<!-- External JS -->
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
